共5点。接口修改、客户信息表、查询栏位、前端展示： 1、第三方接口修改：只有在途、收件、派件状态才判断是否超时。 2、客户信息表修改。 3、第三方表查询栏位。 4、用户的负责的条码转换为名称来显示 5、快递公司转换为快递公司的名字来显示
Signed-off-by: ZS1994 <1217360619@qq.com>

--- a/check/src/main/webapp/framework/jquery-easyui/themes/icon.css
+++ b/check/src/main/webapp/framework/jquery-easyui/themes/icon.css
@@ -125,3 +125,8 @@
 .icon-hgh-refresh{
 	background:url('icons/Refresh.png') no-repeat center center;
 }
+
+
+.icon-data-add{
+	background:url('icons/zs/data_add.png') no-repeat center center;
+}
