前端布局样式调整，报表导出功能    --黄光辉
Signed-off-by: hgh <453668907@qq.com>

--- a/check/src/main/webapp/framework/css/zs.css
+++ b/check/src/main/webapp/framework/css/zs.css
@@ -46,7 +46,7 @@ input{
 	border:#999 1px solid;
 	height: 20px;
 	background: white;
-	width: 168px;
+	width: 140px;
 }
 select{
 	height: 24px;
@@ -58,7 +58,7 @@ select{
 张顺，2017-3-3，修改样式，删除了一些不需要了的样式*/
 .searchBar-input	{
 	float: left;
-	width: 260px; 
+	width: 230px; 
 	height: 50px;
 }
 .searchBar-input>div	{
@@ -68,7 +68,12 @@ select{
 /*黄光辉   ，2017年3月1日，下面是查询栏位的样式*/
 .searchBar-input1	{
 	float: left;
-	width: 260px; 
+	width: 230px; 
+	height: 105px;
+}
+.searchBar-logistic	{
+	float: left;
+	width: 120px; 
 	height: 105px;
 }
 .searchBar-input1>div	{
