--- a/check/src/main/webapp/jsp/iterm/css/base.css
+++ b/check/src/main/webapp/jsp/iterm/css/base.css
@@ -8,7 +8,7 @@ body,button,input,select,textarea{font:12px/1.5 tahoma,arial,\5b8b\4f53;}
 input,select,textarea{font-size:100%;}
 pre{word-wrap: break-word; word-break: normal; overflow:auto;}
 input,button,select,textarea,a{outline:none;}
-a{text-decoration:none;color:white;}
+a{color:white;cursor:pointer;}
 a img{border:none;}
 input{vertical-align: middle;}/*margin: 0 5px 0 0;*/
 table{border-collapse:collapse;border-spacing:0;}
@@ -25,12 +25,11 @@ q:before,q:after {content:'';}
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline;}
 sup {top: -0.5em;}
 sub {bottom: -0.25em;}
-ins,a {text-decoration:none;}
 button {padding-left: 5px;padding-right: 5px;}
 /*rest样式*/
 .window {
     background-color: rgb(229, 170, 27);
-    background: linear-gradient(to bottom,rgb(229, 170, 27) 0,rgb(229, 170, 27) 20%);}
- .window, .window .window-body {border-color:rgb(229, 170, 27);}
+    background: linear-gradient(to bottom,#efefef 0,#dddddd 20%);}
+ .window, .window .window-body {rgb(213, 203, 180);}
    
 
