共4条 增加搜索功能按钮、增加登录信息、修改页面功能、修改大客户显示条数 1.表单里面增加搜索功能 2.首页增加登录人信息 3.修改了一些页面无法使用的功能 4.修改大客户默认显示条数为200
Signed-off-by: 陈文 <898605423@qq.com>

--- a/check/src/main/webapp/jsp/iterm/css/commom.css
+++ b/check/src/main/webapp/jsp/iterm/css/commom.css
@@ -301,5 +301,24 @@ input {
 #mypanel{  border:1px solid lightgray;}
 
 /* from表单样式*/
+#my_search{
+	width:70px;
+	height:30px;
+	background:#e9e5e5;
+	display:block;
+	position:absolute;
+	left:45%;
+	top:60px;
+	text-align:center;
+	line-height:30px;
+	color:black;
+	border-radius:5px;
+}
+#my_search:hover{
+	 background-color:skyblue;
+       cursor: pointer;
+      
+   }
+
 
 
