--- a/check/src/main/webapp/jsp/iterm/css/commom.css
+++ b/check/src/main/webapp/jsp/iterm/css/commom.css
@@ -317,7 +317,7 @@ input {
 	background:#e9e5e5;
 	display:block;
 	position:absolute;
-	left:45%;
+	margin-left:810px;
 	top:60px;
 	text-align:center;
 	line-height:30px;
