--- a/check/src/main/webapp/jsp/iterm/css/commom.css
+++ b/check/src/main/webapp/jsp/iterm/css/commom.css
@@ -10,9 +10,15 @@
 }
 .layout-title{
     position: absolute;
-    top:10px;
-    left: 30px;
+    top:15px;
+    left: 250px;
     font-size: 14px;
+}
+.layout-title>h4{
+	color:white;
+	font-size: 16px;
+	font-weight: 600;
+	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 .layout-help {
@@ -31,11 +37,10 @@
 }
 
 .self_title>a{
-    /*width: 70px;*/
     height: 35px;
     background-color: white;
     position: absolute;
-    top: 28px;
+    top: 7px;
     left: 25%;
     border-radius: 4px;
     color: black;
@@ -44,6 +49,20 @@
     line-height: 35px;
     padding: 0px 8px 0px 8px;
     text-decoration-line: none;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+   
+}
+.my_help{
+	display: inline-block;
+	width: 150px;
+	height: 40px;
+	position: absolute;
+	top: 15px;
+	right: 40px;
+	color:white;
+}
+.my_help>a{
+	color:white;
 }
 
 .self_form{
@@ -128,6 +147,7 @@ input {
     position: relative;
     color: slategray;
    	float: left;
+   	border-radius:5px;
 }
 #menulist > a > span{
     width:16px;
@@ -184,45 +204,57 @@ input {
     overflow: hidden;
 }
 #menulist > a > .iterm1 {
-    background: url("../images/sprice.png") no-repeat center;
+    background: url("../images/文件导入.png") no-repeat center;
     background-position: 1px 1px;
-    text-indent: -10px;
+   /*  text-indent: -10px; */
+    background-size:contain;
+    vertical-align: middle;	
 }
 
 #menulist >a > .iterm2 {
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: -96px 1px;
-    text-indent: -10px;
+    background: url("../images/修改.png") no-repeat center;
+     background-size:contain;
+    vertical-align: middle;	
+   /*  background-position: -96px 1px;
+    text-indent: -10px; */
 
 }
 
 #menulist >a > .iterm3 {
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: 1px -96px;
-    text-indent: -10px;
+    background: url("../images/批量删除.png") no-repeat center;
+    background-size:contain;
+    vertical-align: middle;	
+   /*  background-position: 1px -96px;
+    text-indent: -10px; */
 }
 
 #menulist > a > .iterm4 {
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: 1px -127px;
-    text-indent: -10px;
+    background: url("../images/删除所有记录.png") no-repeat center;
+     background-size:contain;
+    vertical-align: middle;	
+    /* background-position: 1px -127px;
+    text-indent: -10px; */
 }
 
 #menulist > a > .iterm5 {
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: -288px -63px;
-    text-indent: -10px;
+    background: url("../images/查询.png") no-repeat center;
+      background-size:contain;
+    vertical-align: middle;	
+   /*  background-position: -288px -63px;
+    text-indent: -10px; */
 }
-#menulist> a>.iterm6{
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: -256px -63px;
-    text-indent: -10px;
+#menulist> a>.iterm7{
+    background: url("../images/导出.png") no-repeat center;
+      background-size:contain;
+    vertical-align: middle;	
+   /*  background-position: -256px -63px;
+    text-indent: -10px; */
 }
 
-#menulist> a>.iterm7{
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: -31px -63px;
-    text-indent: -10px;
+#menulist> a>.iterm6{
+    background: url("../images/编辑模板.png") no-repeat center;
+      background-size:contain;
+    vertical-align: middle;
 }
 
 #menulist>a>.iterm8{
@@ -339,5 +371,13 @@ input {
  width:145px;
  height:25px;
  }
+   
+  .logo {
+       	display: inline-block;
+        width: 150px;
+        height: 40px;
+        background-image: url("../images/logo12.jpg");
+      	 background-size:contain;
+            }
 
 
