修改退出    --黄光辉
Signed-off-by: hgh <453668907@qq.com>

--- a/check/src/main/webapp/jsp/iterm/css/commom.css
+++ b/check/src/main/webapp/jsp/iterm/css/commom.css
@@ -54,7 +54,7 @@
 }
 .my_help{
 	display: inline-block;
-	width: 70px;
+	width: 60px;
 	height: 40px;
 	position: absolute;
 	top: 15px;
@@ -385,7 +385,8 @@ input {
       	 background-size:contain;
             }
 .myself_btn{
-	"position:absolute;
-	right:5px;top:24px;
+	position:absolute;
+		right:5px;
+		top:24px;
 } 
 
