--- a/check/src/main/webapp/jsp/iterm/css/commom.css
+++ b/check/src/main/webapp/jsp/iterm/css/commom.css
@@ -150,10 +150,13 @@ input {
    	float: left;
    	border-radius:5px;
    	font-weight:500;
-   	font-size:14px;
+   	font-size:13px;
    	margin-right:4px;
    	
 
+}
+#menulist> a:hover{
+	color:white;
 }
 
 #menulist > a > span{
@@ -211,68 +214,66 @@ input {
     overflow: hidden;
 }
 #menulist > a > .iterm1 {
-    background: url("../images/文件导入.png") no-repeat center;
-    background-position: 1px 1px;
-   /*  text-indent: -10px; */
-    background-size:contain;
+    background: url(../images/sprice.png) 0px 0px;
     vertical-align: middle;	
+     /*导入数据  */
 }
-
 #menulist >a > .iterm2 {
-    background: url("../images/修改.png") no-repeat center;
-     background-size:contain;
+    background: url(../images/sprice.png) -320px -256px;
     vertical-align: middle;	
-   /*  background-position: -96px 1px;
-    text-indent: -10px; */
-
+    /* 编辑数据 */
 }
-
 #menulist >a > .iterm3 {
-    background: url("../images/批量删除.png") no-repeat center;
+    background: url(../images/sprice.png) -480px -191px;
+    vertical-align: middle;	
+    /*批量数据  */
+}
+#menulist > a > .iterm4 {
+    background: url("../images/scsy.png") no-repeat center;
     background-size:contain;
     vertical-align: middle;	
-   /*  background-position: 1px -96px;
-    text-indent: -10px; */
 }
-
-#menulist > a > .iterm4 {
-    background: url("../images/删除所有记录.png") no-repeat center;
-     background-size:contain;
-    vertical-align: middle;	
-    /* background-position: 1px -127px;
-    text-indent: -10px; */
-}
-
-
 #menulist > a > .iterm5 {
-    background: url("../images/查询.png") no-repeat center;
-      background-size:contain;
-    vertical-align: middle;	
-  
-   /*  background-position: -288px -63px;
-    text-indent: -10px; */
+    background: url(../images/sprice.png) -288px 96px;
+    vertical-align: middle;
+    /* 查询数据 */
+}
+#menulist> a>.iterm6{
+    background: url("../images/sprice.png") -254px -256px;
+    vertical-align: middle;
+    /*编辑模板  */
 }
 #menulist> a>.iterm7{
-    background: url("../images/导出.png") no-repeat center;
-      background-size:contain;
+    background: url("../images/sprice.png") -128px 96px;
     vertical-align: middle;	
-   /*  background-position: -256px -63px;
-    text-indent: -10px; */
-}
-
-#menulist> a>.iterm6{
-    background: url("../images/编辑模板.png") no-repeat center;
-      background-size:contain;
-    vertical-align: middle;
+    /*导出数据  */
 }
 
 #menulist>a>.iterm8{
-    background: url("../images/sprice.png") no-repeat left;
-    background-position: -320px -63px;
-    text-indent: -10px;
+    background: url("../images/sprice.png") -320px -63px;
+   vertical-align: middle;
+   /* 快件查询 */
 }
-
-
+#menulist>a>.iterm9{
+    background: url("../images/sprice.png") 0px -64px;
+   vertical-align: middle;
+   /* 保存数据 */
+}
+#menulist>a>.iterm10{
+    background: url("../images/sprice.png") -30px 0px;
+   vertical-align: middle;
+   /* 添加数据 */
+}
+#menulist>a>.iterm10{
+    background: url("../images/sprice.png") -128px 0px;
+   vertical-align: middle;
+   /* 重新生成 */
+}
+#menulist>a>.iterm11{
+    background: url("../images/sprice.png") -96px 1px;
+   vertical-align: middle;
+   /* 统计 */
+}
 .layout-help > a:nth-child(1) {
     background: url("../images/help.png") no-repeat left;
     padding-left: 20px;
